# password-manager

.github/workflows/: main.yml
dotkey-build/: .gitignore  README.md
dotkey-build/.github/workflows/: build.yml
dotkey-build/android/: capacitor.config.ts  index.html  package.json  tsconfig.json
dotkey-build/android/src/: app.ts  fs.ts  main.ts  style.css
dotkey-build/core/: package.json  tsconfig.json
dotkey-build/core/src/: crypto.ts
dotkey-build/desktop/: index.html  package.json  vite.config.ts
dotkey-build/desktop/src/: fs.ts
dotkey-build/desktop/src-tauri/: Cargo.toml  tauri.conf.json
dotkey-build/desktop/src-tauri/icons/: README.txt
